--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
+    "express-handlebars": "^3.0.2",
     "express-session": "^1.15.6",
     "mongoose": "^5.4.1",
     "passport": "^0.4.0",
